# fastapi_logging_samples

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-publish.yml
app/: main.py
app/config/: logger_config.py  telemetry.py
app/routers/: sampling_errors.py  sampling_logs.py
